# muscle-ageing-cell-atlas

./: .gitignore  BEST_SCORING.md  CODE_README.md  DATASET_SAMPLE_README.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
ephemeral_scripts/: detailed_inspection.py  strip_notebook_images.py
processed/: detailed_structure.json  exploration_results.json  phase2_processing_summary.json  skeletal_muscle_10x_unstructured_metadata.json  validation_report.json
scripts/: 01_data_exploration.py  02_data_processing.py  03_validate_processing.py  04_upload_to_huggingface.py
