[project]
name = "muscleageingcellatlas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.22"
dependencies = [
    "jax[cpu]>=0.4.30",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.0",
    "scanpy>=1.10.3",
    "seaborn>=0.13.2",
    "triton>=3.3.1",
    "torch>=2.1.0",
    "scvi>=0.6.8",
    "celltypist>=1.6.3",
    "cellhint>=1.0.0",
    "huggingface-hub>=0.33.0",
    "pyarrow>=20.0.0",
    "typer>=0.16.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
